...
  }

  return (
    <ThemeProvider>
      <SafeAreaProvider>
        <NavigationContainer ref={navigationRef}>
          <View testID="app-root" style={{ flex: 1 }}>
            <RootNavigator />
          </View>
        </NavigationContainer>
        <Toast />
      </SafeAreaProvider>
    </ThemeProvider>
...
